hphp/test/zend/good/ext/gd/tests/bug28147.php.skipif
<?php
	if (!extension_loaded('gd')) die("skip gd extension not available\n");
	if (!function_exists("imageantialias")) die("skip requires bundled GD library\n");
?>