hphp/test/zend/bad/ext/phar/tests/phar_oo_005.php.skipif
<?php
if (!extension_loaded("phar")) die("skip");
if (!extension_loaded("spl")) die("skip SPL not available");
if (version_compare(PHP_VERSION, "5.3", "<") or version_compare(PHP_VERSION, "5.4", ">="))
    die("skip requires 5.3");
?>